--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -24,6 +28,19 @@
 
     </div>
     </header>
+    <!--- location -->
+    <div class="location">
+        <div center="locationwords">
+            <h3 id="london">Islington, London</h3>
+        </div>
+    </div>
+
+    <!--Call to action-->
+    <div>
+
+    </div>
+
+
 
 
 
