2nd section almost complete

--- a/index.html
+++ b/index.html
@@ -36,7 +36,21 @@
     </div>
 
     <!--Call to action-->
-    <div>
+    <div class="cta">
+        <h2 class="book">Book the meal you want </h2>
+
+        <h3 class="discover">Discover our carefully selected high-end restraunts</h3>
+
+
+
+        <button>
+            <h2>Explore our restraunts
+
+            </h2>
+        </button>
+
+
+
 
     </div>
 
