resturant cards are done: I'm yet to add icons on the main page

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 </head>
 
 <body>
-    <div class="title">
+    <header class="title">
         <h1>
-            <div class="titles">
+            <header class="titles">
                 OhmyFood
-            </div>
+            </header>
 
-    </div>
+            </div>
     </header>
     <!--- location -->
-    <div class="location">
-        <div center="locationwords">
+    <header class="location">
+        <header class="locationwords">
             <h3 id="london">Islington, London</h3>
-        </div>
-    </div>
+        </header>
+    </header>
 
     <!--Call to action-->
     <div class="cta">
@@ -54,6 +54,88 @@
 
     </div>
 
+
+    <div class="howitworks">
+
+        <h2>How it works</h2>
+
+
+        <div class="info">
+            <div class="middile">
+                <h3>Choose a restaurant</h3>
+            </div>
+        </div>
+
+        <div class="info">
+            <div class="middle">
+                <h3>Bulid your meal</h3>
+            </div>
+        </div>
+
+        <div class="info">
+            <div class="middle">
+                <h3>Enjoy your meal at the restaurant</h3>
+            </div>
+        </div>
+    </div>
+
+    <main class="main">
+        <h2>Restraunts</h2>
+
+        <main class="cards">
+
+            <div class="card">
+
+                <img
+                    src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+
+                <div class="textleft">
+                    <h3 class="top">Kitchen West</h3><i class="fa-regular fa-heart"></i>
+
+                    <p class="angel">Angel</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <img
+                    src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+                <div class="textleft">
+                    <h3 class="top">Elderflower</h3>
+
+                    <p class="angel">Old Street</p>
+                </div>
+            </div>
+            </div>
+            <div class="card">
+
+                <img
+                    src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+                <div class="textleft">
+                    <h3 class="top">Shoreditch Canteen</h3>
+                    <p class="angel">Shoreditch</p>
+                </div>
+            </div>
+            </div>
+            <div class="card">
+                <img
+                    src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+                <div class="textleft">
+                    <h3 class="top">The Bay Leaf</h3>
+                    <p class="angel">Hoxton</p>
+                </div>
+            </div>
+
+
+        </main>
+
+
+
+    </main>
+
+    <footer>
+        <p>Ohmyfood</p>
+
+    </footer>
 
 
 
