--- a/index.html
+++ b/index.html
@@ -1,145 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
-        rel="stylesheet">
-</head>
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
 
-<body>
-    <header class="title">
-        <h1>
-            <header class="titles">
-                OhmyFood
-            </header>
-
-            </div>
+  <body class="home-page">
+    <header>
+      <h1 class="logo">Oh My Food</h1>
     </header>
-    <!--- location -->
-    <header class="location">
-        <header class="locationwords">
-            <h3 id="london">Islington, London</h3>
-        </header>
-    </header>
-
-    <!--Call to action-->
-    <div class="cta">
-        <h2 class="book">Book the meal you want </h2>
-
-        <h3 class="discover">Discover our carefully selected high-end restraunts</h3>
-
-
-
-        <button>
-            <h2>Explore our restraunts
-
-            </h2>
-        </button>
-
-
-
-
-    </div>
-
-
-    <div class="howitworks">
-
-        <h2>How it works</h2>
-
-
-        <div class="info">
-            <div class="middile">
-                <h3>Choose a restaurant</h3>
-            </div>
+    <main>
+      <div class="location">
+        <i class="fa-solid fa-location-dot location_icon"></i>
+        <h2 class="location_text">Islington, London</h2>
+      </div>
+      <div class="book-meal">
+        <h2 class="book-meal_title">Book the meal you want</h2>
+        <p class="book-meal_description">
+          Discover our carefully selected high-end restaurants
+        </p>
+        <div class="button">
+          <button class="btn">Explore out restaurants</button>
         </div>
-
-        <div class="info">
-            <div class="middle">
-                <h3>Bulid your meal</h3>
-            </div>
-        </div>
-
-        <div class="info">
-            <div class="middle">
-                <h3>Enjoy your meal at the restaurant</h3>
-            </div>
-        </div>
-    </div>
-
-    <main class="main">
-        <h2>Restraunts</h2>
-
-        <main class="cards">
-
-            <div class="card">
-
-                <img
-                    src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
-
-                <div class="textleft">
-                    <h3 class="top">Kitchen West</h3><i class="fa-regular fa-heart"></i>
-
-                    <p class="angel">Angel</p>
-                </div>
-            </div>
-
-            <div class="card">
-                <img
-                    src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
-                <div class="textleft">
-                    <h3 class="top">Elderflower</h3>
-
-                    <p class="angel">Old Street</p>
-                </div>
-            </div>
-            </div>
-            <div class="card">
-
-                <img
-                    src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
-                <div class="textleft">
-                    <h3 class="top">Shoreditch Canteen</h3>
-                    <p class="angel">Shoreditch</p>
-                </div>
-            </div>
-            </div>
-            <div class="card">
-                <img
-                    src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
-                <div class="textleft">
-                    <h3 class="top">The Bay Leaf</h3>
-                    <p class="angel">Hoxton</p>
-                </div>
-            </div>
-
-
-        </main>
-
-
-
+      </div>
     </main>
+    <div class="howitworks">
+      <h2 class="hiw_title">How it works</h2>
 
-    <footer>
-        <p>Ohmyfood</p>
+      <div class="hiw_box">
+        <i class="fa-solid fa-mobile-screen-button hiw_box_mobile"></i>
+        <h2 class="hiw_box_text">Choose a restaurant</h2>
+      </div>
 
-    </footer>
+      <div class="hiw_box">
+        <i class="fa-solid fa-list-ul hiw_box_list"></i>
+        <h2 class="hiw_box_text">Bulid your meal</h2>
+      </div>
 
+      <div class="hiw_box">
+        <i class="fa-solid fa-store hiw_box_store"></i>
+        <h3 class="hiw_box_text">Enjoy your meal at the restaurant</h3>
+      </div>
+    </div>
 
-
-
-</body>
-
+    <section class="rest">
+      <h2 class="title">Restaurants</h2>
+      <div class="cards">
+        <img
+          src="Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        />
+        <h3>Kitchen</h3>
+      </div>
+    </section>
+  </body>
 </html>
