mobile version finished(just need to add icons and create media queries)

--- a/index.html
+++ b/index.html
@@ -104,5 +104,26 @@
         
       </div>
     </section>
+    <footer>
+
+      <h4>OhyMyFood</h4>
+<div>
+  <p>Suggest a restaurant</p>
+  <p>Become a partner</p>
+  <div class="p">
+    <p >Legal notice</p>
+    <p >Contact</p>
+
+  </div>
+ 
+</div>
+  
+
+
+      
+
+
+
+    </footer>
   </body>
 </html>
