--- a/menu1.index.html
+++ b/menu1.index.html
@@ -21,8 +21,23 @@
   </head>
 
   <body class="menu-page">
-    <header>
-      <h1 class="logo">Oh My Food</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1 class="logo">ohmyfood</h1>
+        <div></div>
+      </header>
+      <main>
+        <div>
+          <img
+            class="image"
+            src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          />
+
+          <div class="content">
+            <h1>Kitchen West</h1>
+          </div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
