--- a/index.html
+++ b/index.html
@@ -38,79 +38,82 @@
           <button class="btn">Explore out restaurants</button>
         </div>
       </div>
+      <div class="container">
+        <div class="howitworks">
+          <h2 class="hiw_title">How it works</h2>
+          <div class="hiw_items">
+            <div class="hiw_box">
+              <div class="circle">
+                <p>1</p>
+              </div>
+              <i class="fa-solid fa-mobile-screen-button hiw_box_mobile"></i>
+              <h2 class="hiw_box_text">Choose a restaurant</h2>
+            </div>
+
+            <div class="hiw_box">
+              <div class="circle">
+                <p>2</p>
+              </div>
+
+              <i class="fa-solid fa-list-ul hiw_box_list"></i>
+
+              <h2 class="hiw_box_text">Bulid your meal</h2>
+            </div>
+
+            <div class="hiw_box">
+              <div class="circle">
+                <p>2</p>
+              </div>
+
+              <i class="fa-solid fa-list-ul hiw_box_list"></i>
+
+              <h2 class="hiw_box_text">Enjoy your meal at the restaurant</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <section class="rest">
+        <div class="container">
+          <h2>Restaurants</h2>
+          <div class="card">
+            <div class="cards">
+              <img
+                src="Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+              />
+
+              <h3>Kitchen West <i class="fa-regular fa-heart"></i></h3>
+
+              <p>Angel Street</p>
+            </div>
+
+            <div class="cards">
+              <img
+                src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+              />
+
+              <h3>Shoreditch Canteen</h3>
+              <p>Shoreditch</p>
+            </div>
+
+            <div class="cards">
+              <img
+                src="Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+              />
+
+              <h3>The Bay Leaf</h3>
+              <p>Hoxton</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <div class="howitworks">
-      <h2 class="hiw_title">How it works</h2>
-
-      <div class="hiw_box">
-        <div class="circle">
-          <p>1</p>
-        </div>
-        <i class="fa-solid fa-mobile-screen-button hiw_box_mobile"></i>
-        <h2 class="hiw_box_text">Choose a restaurant</h2>
-      </div>
-
-      <div class="hiw_box">
-        <div class="circle">
-          <p>2</p>
-        </div>
-
-        <i class="fa-solid fa-list-ul hiw_box_list"></i>
-
-        <h2 class="hiw_box_text">Bulid your meal</h2>
-      </div>
-
-      <div class="hiw_box">
-        <div class="circle">
-          <p>3</p>
-        </div>
-        <i class="fa-solid fa-store hiw_box_store"></i>
-        <h3 class="hiw_box_text">Enjoy your meal at the restaurant</h3>
-      </div>
-    </div>
-
-    <section class="rest">
-      <h2>Restaurants</h2>
-      <div class="card">
-        <div class="cards">
-          <img
-            src="Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-          />
-
-          <h3>Kitchen West <i class="fa-regular fa-heart"></i></h3>
-
-          <p>Angel Street</p>
-        </div>
-
-        <div class="cards">
-          <img
-            src="./Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-          />
-
-          <h3>Shoreditch Canteen</h3>
-          <p>Shoreditch</p>
-        </div>
-
-        <div class="cards">
-          <img
-            src="Images+and+text+ohmyfood (1)/Images and text Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-          />
-
-          <h3>The Bay Leaf</h3>
-          <p>Hoxton</p>
-        </div>
-      </div>
-    </section>
     <footer>
       <h4>OhyMyFood</h4>
-      <div>
-        <p>Suggest a restaurant</p>
-        <p>Become a partner</p>
-        <div class="p">
-          <p>Legal notice</p>
-          <p>Contact</p>
-        </div>
-      </div>
+      <p>Suggest a restaurant</p>
+      <p>Become a partner</p>
+      <p>Legal notice</p>
+      <p>Contact</p>
     </footer>
   </body>
 </html>
